# awmt-basic-python-package

./: .bumpversion.cfg  README.md  pyproject.toml
.github/workflows/: build.yml  build_and_deploy.yml  checkout.yml  create_release.yml  delete_runs.yml  deploy_release.yml  publish.yml  test.yml  unit_test.yml
AWMT_BasicPythonPackage/: example.py  main.py
tests/: test_example.py
