[tool.poetry]
name = "AWMT_BasicPythonPackage"
version = "0.1.0"
description = "A simple template package"
authors = ["Andy West"]
readme = "README.md"
packages = [{include = "AWMT_BasicPythonPackage"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"